--- a/html/header.html
+++ b/html/header.html
@@ -36,7 +36,7 @@
                         <li><a href="#"><i class="fa-solid fa-cart-shopping"></i><span> Carrinho</span></a></li>
                     </ul>-->
                 <div class="menu">
-                    <a href="#"><i class="fa-solid fa-user"></i><span> Login</span></a>
+                    <a href="register.html"><i class="fa-solid fa-user"></i><span> Login</span></a>
                     <a href="#"><i class="fa-solid fa-cart-shopping"></i><span> Carrinho</span></a>
                 </div>
             </div>
